--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
 	<head>
 		<meta charset="UTF-8">
-		<title>MY FIRST PAGE</title>
+		<title>Homepage</title>
 	</head>
 	<body>
 		<nav></nav>
